Tue Jun 10 13:56:17 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/Stack_Trace.cpp:

          One more fix for Win32 wchar.

Tue Jun 10 13:32:57 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2980_Regression_Test.cpp:

          Avoid pointer-to-function and pointer-to-object warnings from g++.

Tue Jun 10 12:53:05 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/SSL/SSL_Asynch_Stream_Test.cpp:

          Modified to avoid virtual method hiding.

Tue Jun 10 11:37:09 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Time_Value_Test.cpp:

          Added a static cast to avoid warnings on QNX.

Tue Jun 10 10:57:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/ACE.cpp:

          Correct presidence bug highlighted by FC9_GCC_430 build:
          ACE.cpp:1429: warning: suggest parentheses around && within ||
          ACE.cpp:1665: warning: suggest parentheses around && within ||
          ACE.cpp:1853: warning: suggest parentheses around && within ||
          The default precidence is && before ||, but the way the ||
          statements were grouped, it was clear that was not the intended
          resolution.

          Correct empty if statement bug highlighted by FC9_GCC_430 build:
          ACE.cpp:2773: warning: suggest braces around empty body in an 'if' statement

          Also removed warnings by using empty braces:
          ACE.cpp:3389: warning: suggest a space before ';' or explicit braces around empty body in 'while' statement
          ACE.cpp:3414: warning: suggest a space before ';' or explicit braces around empty body in 'while' statement


Mon Jun  9 21:38:04 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * ace/Stack_Trace.cpp:

          Passed string literals instead of ACE_TEXT string to GetProcAddress as it
          accepts LPCSTR which is defined as char*. This should fix wchar (Win32)
          build errors.
